--- a/uptimekuma/fly.toml
+++ b/uptimekuma/fly.toml
@@ -1,42 +1,41 @@
-# fly.toml file generated for kuma-web on 2022-09-07T12:17:20+09:00
+# fly.toml app configuration file generated for kuma-web on 2023-07-27T12:25:26+09:00
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
 
 app = "kuma-web"
+primary_region = "nrt"
 kill_signal = "SIGINT"
-kill_timeout = 5
-processes = []
-
-[mounts]
-  source = "uptimekuma_data"
-  destination = "/app/data"
-
-[env]
+kill_timeout = "5s"
 
 [experimental]
-  allowed_public_ports = []
   auto_rollback = true
 
+[[mounts]]
+  source = "uptimekuma_data"
+  destination = "/app/data"
+  processes = ["app"]
+
 [[services]]
-  http_checks = []
+  protocol = "tcp"
   internal_port = 3001
   processes = ["app"]
-  protocol = "tcp"
-  script_checks = []
+
+  [[services.ports]]
+    port = 80
+    handlers = ["http"]
+    force_https = true
+
+  [[services.ports]]
+    port = 443
+    handlers = ["tls", "http"]
   [services.concurrency]
+    type = "connections"
     hard_limit = 25
     soft_limit = 20
-    type = "connections"
-
-  [[services.ports]]
-    force_https = true
-    handlers = ["http"]
-    port = 80
-
-  [[services.ports]]
-    handlers = ["tls", "http"]
-    port = 443
 
   [[services.tcp_checks]]
-    grace_period = "1s"
     interval = "15s"
-    restart_limit = 0
     timeout = "2s"
+    grace_period = "1s"
+    restart_limit = 0
